<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rose BandWidth Monitoring Utility</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="message_Requirements">You must log in  with your RoseHulman Credentials \nMake sure you are connected Rose Hulman Network</string>
    <string name="message_Req_Title">Login Required</string>
    <string name="about_Message">This is an utility that helps you monitoring your bandwidth usage</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="menu_check_bandwidth">Check Bandwidth</string>
    <string name="menu_usage_report">Usage Report</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="title_activity_band_width_usage">BandWidthUsage</string>
    <string name="label_restricted">Restricted?</string>
    <string name="label_Sent">Sent:</string>
    <string name="label_Received">Received:</string>
    <string name="result_restricted">Yes</string>
    <string name="result_Sent">100MB</string>
    <string name="result_Received">200MB</string>
    <string name="title_activity_usage_report_main">UsageReportMain</string>
    <string name="usage_menu_3days">3 Days</string>
    <string name="usage_menu_weekly">weekly</string>
    <string name="usage_menu_monthly">monthly</string>
    <string name="title_activity_three_days">ThreeDays</string>
    <string name="title_activity_monthly">Monthly</string>
    <string name="title_activity_weekly">Weekly</string>
    <string name="three_days_message">3 days data go to here!</string>
    <string name="weekly_message">Weekly data go to here!</string>
    <string name="monthly_message">monthly data go to here!</string>
    <string name="title_activity_user_setting">UserSetting</string>
    <string name="bandWidthHint">unit in MB</string>
    <string name="bandWidthLabel">Set BandWidth Limit </string>
    <string name="auto_notification">Auto-Notification</string>
    <string name="deleteProfileText">Delete My Profile </string>
    <string name="deleteProfileTextButton">Delete</string>
    <string name="CreditText">Credit:      Xia Li and Zhengyu Qin</string>
    <string name="saveSettingButtonText">Save Settings and return</string>
    <string name="hint_xValue">Give x Value</string>
    <string name="hint_yValue">Give y Value</string>
    <string name="x_text">X </string>
    <string name="y_text">Y </string>
    <string name="add_Button_text">Add</string>
    <string name="new_series_text">New Series</string>
    <string name="fontHint">20</string>
    <string name="setFont">Set Font size to be displayed </string>
    <string name="credit">Credit</string>
    <string name="about_Title">About this app</string>
    <string name="about_content">This is an Android Fall 2013 Term project \n \nBrought to you by Xia,Li and Daniel Qin.\n \nIt helps you keep track of your bandwidth usage and history</string>

</resources>