<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_rose_red"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/button_check_bandwidth"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:text="@string/menu_check_bandwidth"
        android:textColor="@color/text_color_white"/>
    
    <Button
        android:id="@+id/button_usage_report"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:text="@string/menu_usage_report"
        android:textColor="@color/text_color_white"/>
    
    <Button
        android:id="@+id/button_settings"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:text="@string/menu_settings"
        android:textColor="@color/text_color_white"/>
    
    <Button
        android:id="@+id/button_about"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:text="@string/menu_about"
        android:textColor="@color/text_color_white"/>
    
    <Button
        android:id="@+id/button_exit"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:text="@string/menu_exit"
        android:textColor="@color/text_color_white"/>
    

</LinearLayout>